Refactor logic for supporting HF_MODEL_ID to support MME use case (#712)
* Refactor logic for supporting HF_MODEL_ID to support MME use case

* Fixes empty model folder bug

* Use Path API instead of File

* Fixes unittest

* Return model path if model already exists

* Fix bug with model store check, modify logic for hf model creation and discovery

---------

Co-authored-by: Frank Liu <frankfliu2000@gmail.com>